[package]
name = "btoi"
version = "0.4.0" # remember to update html_root_url
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
license = "MIT/Apache-2.0"
keywords = ["conversion", "integer", "atoi", "no_std"]
readme = "README.md"
repository = "https://github.com/niklasf/rust-btoi"
categories = ["parsing"]
description = "Parse integers directly from ASCII byte slices"

[[bench]]
name = "benches"
harness = false

[badges]
travis-ci = { repository = "niklasf/rust-btoi" }

[dependencies.num-traits]
version = "0.2"
default-features = false

[dev-dependencies]
quickcheck = "0.8"
bencher = "0.1"

[features]
default = ["std"]
std = ["num-traits/std"]
