[package]
name = "btoi"
version = "0.4.3" # remember to update changelog and html_root_url
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
license = "MIT OR Apache-2.0"
keywords = ["conversion", "integer", "atoi", "no_std"]
readme = "README.md"
repository = "https://github.com/niklasf/rust-btoi"
categories = ["parsing"]
description = "Parse integers directly from ASCII byte slices"
edition = "2021"

[[bench]]
name = "benches"
harness = false

[dependencies.num-traits]
version = "0.2"
default-features = false

[dev-dependencies]
quickcheck = "1"
bencher = "0.1"

[features]
default = ["std"]
std = ["num-traits/std"]
